# ul-open-explorations-1

./: .env.example  .gitignore  AGENTS.md  CADENCE.md  DEPLOYMENT.md  README.md  SWARM.md  app.js  index.html  package-lock.json  package.json  refine_lessons.py  styles.css
.github/workflows/: ci.yml  mobile.yml  pages.yml  release-ios.yml
archive/: README.md  runs.jsonl
candidates/: README.md
candidates/seed/: Cargo.toml
candidates/seed/src/: lib.rs
dashboard/: build.py
dashboard/public/: app.js  data.json  index.html  style.css
daw-lab/: Cargo.toml  NOTION.md  README.md
daw-lab/src/: lib.rs
engine/: Cargo.toml
engine/src/: lib.rs  mixer.rs  protocol.rs  samples.rs  synth.rs  transport.rs
evaluator/: protocol_test.py  regression.py  score.py
evaluator/contract/: bench.rs
lessons/: 01-raw-signal.js  02-time-domain.js  06-smoothing.js  08-onsets-beats.js  09-musical-features.js
lessons-rewritten/: 03-fft.js  04-spectrum.js  05-spectral-shape.js  07-normalization.js  10-correlation-mapping.js
lib/: audio.js  draw.js  sources.js
mobile/: .gitignore  App.tsx  app.json  eas.json  package.json  tsconfig.json
mobile/protocol/: nativeTransport.ts  protocol.ts  stdioTransport.ts
mobile/tools/: smoke.ts
orchestrator/: loop.py
orchestrator/prompts/: generate.md
reference/daw-lab/: Cargo.toml  NOTION.md  PRIMER.md  README.md
scripts/: restore-whitespace.js  rewrite-lessons.js
sketches/: index.html
sketches/01-rust-foundations/: index.html
sketches/02-functions/: index.html
sketches/03-structs-impl/: index.html
sketches/engine-so-far/: index.html
sketches/guarding-the-audio-thread/: index.html
sketches/seeing-the-graph/: index.html
sketches/why-the-average-lies/: index.html
spec/: constraints.md  metrics.md  objective.md  profiles.md  protocol.md
spec/ladder/: README.md  ladder.json
spec/ladder/rung-01-synth-core/: contract.md
spec/ladder/rung-01-synth-core/tests/: render-basic.json
spec/ladder/rung-02-transport/: budget.md  contract.md
spec/ladder/rung-02-transport/tests/: clock-advance.json  seek.json
spec/ladder/rung-03-mixer/: budget.md  contract.md
spec/ladder/rung-03-mixer/tests/: pan-hard-left.json  state-stereo.json  track-gain-mute.json
spec/ladder/rung-04-sample-playback/: budget.md  contract.md
spec/ladder/rung-04-sample-playback/tests/: loop-continues.json  one-shot-finishes.json  sample-panned.json
