[package]
name = "daw-engine"
edition = "2021"
version = "0.1.0"

[lib]
name = "daw_engine"
path = "src/lib.rs"

[[bin]]
name = "headless"
path = "src/bin/headless.rs"

# Perf harness for rung 1 (synth throughput). The evaluator OVERWRITES this file
# with its canonical copy (evaluator/contract/bench.rs) before scoring, so the
# committed version is only a placeholder that must compile.
[[bin]]
name = "bench"
path = "src/bin/bench.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
