[package]
name = "daw-lab"
version = "0.1.0"
edition = "2021"
description = "A learning lab for DAW audio-engine internals. Each demo is runnable and measurable."

# Shared, reusable building blocks (nodes, the membrane primitives) live in the lib so
# every demo binary can pull from the same toolbox. Step 3's "why it chokes" demo will
# reuse the SineOsc and AtomicF32 defined here.
[lib]
name = "daw_lab"
path = "src/lib.rs"

# Demo (A): the slider -> atomic -> oscillator membrane.
[[bin]]
name = "membrane"
path = "src/bin/membrane.rs"

# Experiment 1: the first edge — osc -> gain — plus a static-vs-dynamic dispatch
# measurement. Introduces the Node trait that every later rung reuses.
[[bin]]
name = "chain"
path = "src/bin/chain.rs"

# Experiment 2: the first graph — many voices into a mixer — and the buffer-layout
# bet (per-voice buffers vs. one accumulator bus), measured as voice count scales.
[[bin]]
name = "mix"
path = "src/bin/mix.rs"

# Experiment 3: the worst-case rig — time every block, report the tail (p99/p99.9/
# max) and dropouts, and show why one forbidden op on the audio thread is fatal.
[[bin]]
name = "rig"
path = "src/bin/rig.rs"

# Release profile is what matters for any timing claim. Debug builds are 10-50x slower
# and would lie to us about the real-time budget, so always measure with --release.
[profile.release]
opt-level = 3
